--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   
   <body>
-    <nav class="navbar navbar-dark navbar-expand-md pt-0 pb-0 container-fluid sticky-top" id="mainNavbar">
+    <nav class="navbar navbar-dark navbar-expand-md pt-0 pb-0 container-fluid fixed-top" id="mainNavbar">
       <a href="a" class="navbar-brand">CANDY</a>
       <!-- CREATING HAMBURGER -->
       <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navLinks" aria-label="Toggle navigation">
